--- a/practice/0515/0515.md
+++ b/practice/0515/0515.md
@@ -5,6 +5,8 @@
 3. 用 NodeJS 內建的-Read File
 4. await/ async
 5. promise-all
+6. npm npx
+7. 引用axios ->crawler
 
 # 練習項目
 1. 複習promise()
@@ -17,6 +19,7 @@
    * 內建promise--->改寫await版本
 3. await/ async
 4. promise-all
+5. crawler
 
 # 練習心得
 
